# agentic-ai

./: .gitignore  README.md  dataset.json  pyproject.toml
assets/artifacts/: .gitkeep
assets/images/: .gitkeep
scripts/: run_agentic_app.py
src/: embeddings.py  main_agent.py  settings.py  weather_agent.py  weather_tools.py
tests/: test_agent.py
